--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,7 @@ DB_DATABASE=laravel_chat
 DB_USERNAME=root
 DB_PASSWORD=
 
-BROADCAST_DRIVER=log
+BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
@@ -50,9 +50,16 @@ PUSHER_HOST=
 PUSHER_PORT=443
 PUSHER_SCHEME=https
 PUSHER_APP_CLUSTER=mt1
+PUSHER_APP_ENABLE_STATISTICS=true
+PUSHER_APP_ENCRYPTED=false
+PUSHER_APP_HOST="127.0.0.1"
+PUSHER_APP_PORT=6001
+PUSHER_APP_SCHEME="http"
 
 VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+LARAVEL_WEBSOCKETS_PERFORM_DNS_LOOKUP=true
